Fix: Filter button only on mobile (#346)
* Increase button filter specifity from (0,2,0) to (0,3,0)

* Updates CHANGELOG.md

--- a/src/components/sections/ProductGallery/product-gallery.scss
+++ b/src/components/sections/ProductGallery/product-gallery.scss
@@ -69,7 +69,7 @@
     min-height: initial;
     padding: 0;
 
-    .button {
+    .button[data-store-button] {
       display: none;
     }
   }
